--- a/i3/config
+++ b/i3/config
@@ -42,7 +42,7 @@
 
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 
-font pango: Noto Sans Regular 12
+font pango: JetBrains Mono 12
 
 # set the mod key to the winkey:
 
@@ -233,7 +233,7 @@ bindcode $mod+Shift+90 move container to workspace $ws10
 
 # start a terminal
 
-bindsym $mod+Return exec xfce4-terminal
+bindsym $mod+Return exec alacritty
 
 # kill focused window
 
@@ -434,7 +434,7 @@ workspace $ws10 output HDMI-0
 
 # bind program to workspace and focus to them on startup:
 
-assign [class="(?i)xfce4-terminal"] $ws1
+assign [class="(?i)alacritty"] $ws1
 assign [class="(?i)code"] $ws1
 assign [class="(?i)firefox"] $ws2
 assign [class="(?i)microsoft-edge-dev"] $ws2
@@ -446,7 +446,7 @@ assign [class="(?i)spotify"] $ws10
 
 # automatic set focus new window if it opens on another workspace than the current:
 
-for_window [class=(?i)xfce4-terminal] focus
+for_window [class=(?i)alacritty] focus
 for_window [class=(?i)code] focus
 for_window [class=(?i)firefox] focus
 for_window [class=(?i)microsoft-edge-dev] focus
@@ -558,7 +558,8 @@ exec --no-startup-id ~/.screenlayout/monitor.sh
 
 # exec --no-startup-id sleep 2 && nitrogen --restore
 
-exec_always --no-startup-id feh --bg-fill --randomize $HOME/hdd/wallpapers/
+#exec_always --no-startup-id feh --bg-fill --randomize $HOME/hdd/wallpapers/
+exec_always --no-startup-id feh --bg-fill $HOME/hdd/wallpapers/0311.jpg
 
 # set powersavings for display:
 
@@ -811,25 +812,17 @@ strip_workspace_numbers yes
 
 ## rofi bindings fancy application menu ($mod+d /F9 optional disabled)
 
-bindsym $mod+d exec rofi -modi drun -show drun \
- -config ~/.config/rofi/rofidmenu.rasi
-
-#bindsym F9 exec rofi -modi drun -show drun \
+bindsym $mod+d exec rofi -modi drun -show drun -show-icons -font "JetBrains Mono 14"
 
 # -config ~/.config/rofi/rofidmenu.rasi
 
-## rofi bindings for window menu ($mod+t /F10 optional disabled)
+# rofi bindings for window menu ($mod+t /F10 optional disabled)
 
-bindsym $mod+t exec rofi -show window \
- -config ~/.config/rofi/rofidmenu.rasi
-
-#bindsym F10 exec rofi -show window \
-
-# -config ~/.config/rofi/rofidmenu.rasi
+bindsym $mod+t exec rofi -show window -show-icons -font "JetBrains Mono 14"
 
 ## rofi bindings to manage clipboard (install rofi-greenclip from the AUR)
 
 #exec --no-startup-id greenclip daemon>/dev/null
-#bindsym $mod+c exec --no-startup-id rofi -modi "clipboard:greenclip print" -show clipboard \
+#bindsym $mod+c exec --no-startup-id rofi -modi "clipboard:greenclip print" -show clipboard
 
 # -config ~/.config/rofi/rofidmenu.rasi
